2020/07/14 Ch17 서블릿 수정

--- a/Ch17/WebContent/WEB-INF/web.xml
+++ b/Ch17/WebContent/WEB-INF/web.xml
@@ -29,7 +29,7 @@
   
   <servlet-mapping>
   	<servlet-name>Greeting</servlet-name>
-  	<url-pattern>/Greeting.do</url-pattern>
+  	<url-pattern>/greeting.do</url-pattern>
   </servlet-mapping>
   
 </web-app>
