2020/07/30 팜스토리2 완료(게시물 삭제, 수정 남음)

--- a/Farmstory2/.settings/org.eclipse.core.resources.prefs
+++ b/Farmstory2/.settings/org.eclipse.core.resources.prefs
@@ -3,3 +3,4 @@ encoding//WebContent/_footer.jsp=UTF-8
 encoding//WebContent/_header.jsp=UTF-8
 encoding//WebContent/css/style.css=UTF-8
 encoding//src/kr/farmstory2/config/SQL.java=UTF-8
+encoding//src/kr/farmstory2/service/board/ListService.java=UTF-8
