--- a/Jboard1/.settings/org.eclipse.core.resources.prefs
+++ b/Jboard1/.settings/org.eclipse.core.resources.prefs
@@ -1,4 +1,6 @@
 eclipse.preferences.version=1
 encoding//WebContent/css/style.css=UTF-8
+encoding//src/kr/co/jboard1/bean=UTF-8
+encoding//src/kr/co/jboard1/config=UTF-8
 encoding//src/kr/co/jboard1/config/SQL.java=UTF-8
 encoding/<project>=UTF-8
